objects/Marks__c.object
<CustomObject>
    <description>MArks obtained by students in a subject</description>
    <fields>
        <fullName>Marks_Obtained__c</fullName>
        <label>Marks Obtained</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Marks__c</fullName>
        <label>Maximum Marks</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Marks</relationshipLabel>
        <relationshipName>Marks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Subject_Name__c</fullName>
        <inlineHelpText>Name of the subject</inlineHelpText>
        <label>Subject Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Marks</label>
    <nameField>
        <displayFormat>MarksRec-{0000000}</displayFormat>
        <label>Marks Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MARKS_CANT_BE_GREATER_THAN_MAX_MARKS</fullName>
        <active>true</active>
        <errorConditionFormula>Marks_Obtained__c  &gt;  Maximum_Marks__c</errorConditionFormula>
        <errorDisplayField>Marks_Obtained__c</errorDisplayField>
        <errorMessage>MARKS OBTAINED CANNOT BE GREATER THAN MAXIMUM MARKS FOR THE SUBJECT</errorMessage>
    </validationRules>
</CustomObject>